--- a/resources/css/header.css
+++ b/resources/css/header.css
@@ -1,10 +1,16 @@
 /* General Styles */
-body {
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box  ; 
+}
+/* body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f9f9f9; /* Light background color */
-}
+
+    background-color: #f9f9f9; 
+} */
 
 /* Header Styles */
 header {
