--- a/resources/css/footer.css
+++ b/resources/css/footer.css
@@ -1,7 +1,7 @@
 footer{
     background-color: #000;
     color: #fff;
-    height: 80%;
+    height: 20%;
     width: 100%;
     position: relative;
     display: flex;
@@ -12,14 +12,14 @@ footer{
    
   
 }
-div{
+/* div{
     position: relative;
     display: flex;
     flex-direction: column;
     height: 80%;
     width: 20%;
 
-}
+} */
 
 footer>h1{
     font-size: 4vw;
