--- a/resources/css/products.css
+++ b/resources/css/products.css
@@ -55,8 +55,8 @@ h2 {
 
 /* Image styling */
 .product-card img {
-    width: 100%;
-    height: auto; /* Maintain aspect ratio */
+    /* width: 100%; */
+    height: 30vh; /* Maintain aspect ratio */
 }
 
 /* Product title styles */
